added styles.css and moved styling into it

--- a/index.html
+++ b/index.html
@@ -5,24 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
     <link rel="stylesheet" href="https://pyscript.net/alpha/pyscript.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script defer src="https://pyscript.net/alpha/pyscript.js"></script>
-    <style>
-        #header {
-            font-size: xx-large;
-            text-align: center;
-        }
-        #file {
-            font-size: larger;
-            display: grid;
-            margin: auto;
-        }
-        #uploadButton {
-            font-size: large;
-            display: grid;
-            margin: auto;
-            background-color: lightblue;
-        }
-    </style>
 </head>
 
 <body>
@@ -37,53 +21,6 @@
     </button>
 </body>
 
-<py-script>
-    # mostly borrowed from: https://www.youtube.com/watch?v=RVhVr6x0CgU
-    import asyncio
-    import js
-    from js import document, FileReader
-    from pyodide import create_proxy
-
-
-    def corrupt_file(path: str) -> None:
-        f = open(path, 'wb')
-        for offset in range(1, 3):
-            f.seek(offset)
-            f.write(bytes('garbage', 'utf-8'))
-        f.close()
-
-
-    def read_complete(event) -> None:
-        # corrupt the file
-        corrupt_file(event)
-        
-        # prompt the user to download the file
-
-
-    async def process_file(file) -> None:
-        file_list = document.getElementById('uploadButton').files
-
-        for f in fileList:
-            # reader is a pyodide.JsProxy
-            reader = FileReader.new()
-
-            # create a python proxy for the callback function
-            onload_event = create_proxy(read_complete)
-
-            reader.onload = onload_event
-            # reader.readAsText(f)
-            # trying this method of reading the file since we want to read 
-            # arbitrary files, not only text.
-            reader.readAsArrayBuffer(f)
-
-
-    def main() -> None:
-        # create a python proxy for the callback function
-        file_event = create_proxy(process_file)
-
-        # set the listener to the callback
-        e = document.getElementById("uploadButton")
-        e.addEventListener("click", file_event, False)
-</py-script>
+<py-script src="./main.py"></py-script>
 
 </html>
